[gd_scene load_steps=12 format=3 uid="uid://pd01dp4mpd0g"]

[ext_resource type="Script" uid="uid://5kvm0ojlugqx" path="res://scripts/room_1.gd" id="1_d0u7m"]
[ext_resource type="Texture2D" uid="uid://c4xfiu5frv7bq" path="res://images/temp_bg.png" id="1_xhekj"]
[ext_resource type="Script" uid="uid://bervqc0fos33f" path="res://scripts/rays.gd" id="4_3wwl0"]
[ext_resource type="Script" uid="uid://fmo17p8nnbg1" path="res://scripts/arrow.gd" id="4_d0u7m"]
[ext_resource type="Script" uid="uid://dy7l7xohs6gpf" path="res://scripts/instructions.gd" id="5_0akh5"]
[ext_resource type="Script" uid="uid://b6688iclbied6" path="res://scenes/mirror.gd" id="5_3wwl0"]
[ext_resource type="Texture2D" uid="uid://dwg3tqitqd41m" path="res://icon.svg" id="6_d0u7m"]
[ext_resource type="Script" uid="uid://dxn338574k5cf" path="res://scenes/sphere.gd" id="6_wy464"]
[ext_resource type="Texture2D" uid="uid://d06y05otxnoxq" path="res://images/light.png" id="7_wy464"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3wwl0"]
size = Vector2(164, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wlnl"]
size = Vector2(126, 91.5)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_d0u7m")

[node name="TempBg" type="Sprite2D" parent="."]
modulate = Color(0.481789, 0.481789, 0.481789, 1)
position = Vector2(572.75, 322)
scale = Vector2(1.09431, 1.03859)
texture = ExtResource("1_xhekj")

[node name="Curtain" type="Button" parent="."]
offset_left = 64.0
offset_top = 71.0
offset_right = 254.0
offset_bottom = 390.0
mouse_filter = 2
mouse_default_cursor_shape = 16
text = "curtain
"

[node name="Arrow" type="Button" parent="."]
offset_left = 10.0
offset_top = 316.0
offset_right = 100.0
offset_bottom = 377.0
text = "⬅️"
script = ExtResource("4_d0u7m")
destination_scene = 2

[node name="ShowPuzzleButton" type="Button" parent="."]
offset_left = 725.0
offset_top = 177.0
offset_right = 876.0
offset_bottom = 293.0

[node name="Rays" type="Node2D" parent="."]
script = ExtResource("4_3wwl0")

[node name="Line2D" type="Line2D" parent="Rays"]
position = Vector2(206, 225)

[node name="Laser" type="RayCast2D" parent="Rays"]
collide_with_areas = true

[node name="LightSystem" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Mirror" type="Area2D" parent="LightSystem"]
script = ExtResource("5_3wwl0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightSystem/Mirror"]
position = Vector2(540, 26)
shape = SubResource("RectangleShape2D_3wwl0")

[node name="SphereReflector" type="Node2D" parent="LightSystem" groups=["refractor"]]
script = ExtResource("6_wy464")

[node name="Area2D" type="Area2D" parent="LightSystem/SphereReflector" groups=["refractor"]]

[node name="Sphere" type="Button" parent="LightSystem/SphereReflector/Area2D" groups=["refractor"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 421.0
offset_top = 337.0
offset_right = 458.0
offset_bottom = 368.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "ball"

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightSystem/SphereReflector/Area2D" groups=["refractor"]]
position = Vector2(441, 342)
shape = SubResource("RectangleShape2D_4wlnl")

[node name="Sphere2" type="Button" parent="LightSystem" groups=["refractor"]]
layout_mode = 0
offset_left = 623.0
offset_top = 236.0
offset_right = 660.0
offset_bottom = 267.0
text = "ball"

[node name="Sphere3" type="Button" parent="LightSystem" groups=["refractor"]]
layout_mode = 0
offset_left = 310.0
offset_top = 71.0
offset_right = 369.0
offset_bottom = 102.0
text = "ball
"

[node name="Instructions" type="Node2D" parent="."]
visible = false
script = ExtResource("5_0akh5")

[node name="BgInstructions" type="Sprite2D" parent="Instructions"]
position = Vector2(568.5, 307.25)
scale = Vector2(7.46094, 4.70703)
texture = ExtResource("6_d0u7m")

[node name="CloseButton" type="Button" parent="Instructions"]
offset_left = 929.0
offset_top = 15.0
offset_right = 1039.0
offset_bottom = 81.0
text = "X"

[node name="Label" type="Label" parent="Instructions"]
offset_left = 170.0
offset_top = 36.0
offset_right = 660.0
offset_bottom = 449.0
text = "
Deze raadsel is over kracht in de ruimte tussen verschillende hemellichamen, kunne jullie bepalen over welke hemellichaam het gaat? 

Formule  

Instructies: Fgrav = 3,52 * 10^22 N 

G = constante(zelf opzoeken) 

Maarde = (zelf opzoeken) 

r = 1,496 * 10^11 

m = niet bekende "
autowrap_mode = 1

[node name="Hints" type="Node2D" parent="."]
visible = false
script = ExtResource("5_0akh5")

[node name="bg" type="Sprite2D" parent="Hints"]
position = Vector2(568.5, 307.25)
scale = Vector2(7.46094, 4.70703)
texture = ExtResource("6_d0u7m")

[node name="CloseButton" type="Button" parent="Hints"]
offset_left = 929.0
offset_top = 15.0
offset_right = 1039.0
offset_bottom = 81.0
text = "X"

[node name="Label" type="Label" parent="Hints"]
offset_left = 170.0
offset_top = 36.0
offset_right = 660.0
offset_bottom = 449.0
text = "
Deze raadsel is over kracht in de ruimte tussen verschillende hemellichamen, kunne jullie bepalen over welke hemellichaam het gaat? 

Formule  

Instructies: Fgrav = 3,52 * 10^22 N 

G = constante(zelf opzoeken) 

Maarde = (zelf opzoeken) 

r = 1,496 * 10^11 

m = niet bekende "
autowrap_mode = 1

[node name="Hint" type="Button" parent="."]
offset_left = 1058.0
offset_top = 12.0
offset_right = 1137.0
offset_bottom = 71.0
text = "?"

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(984, 209)
scale = Vector2(1.125, 1.01172)
color = Color(0.554878, 0.452474, 0, 1)
energy = 10.32
texture = ExtResource("7_wy464")

[connection signal="pressed" from="Curtain" to="." method="_on_curtain_pressed"]
[connection signal="pressed" from="Arrow" to="." method="_on_arrow_pressed"]
[connection signal="pressed" from="Arrow" to="Arrow" method="_on_pressed"]
[connection signal="pressed" from="ShowPuzzleButton" to="Instructions" method="_on_show_puzzle_button_pressed"]
[connection signal="pressed" from="LightSystem/SphereReflector/Area2D/Sphere" to="." method="_on_sphere_pressed"]
[connection signal="pressed" from="LightSystem/Sphere2" to="." method="_on_sphere_2_pressed"]
[connection signal="pressed" from="LightSystem/Sphere3" to="." method="_on_sphere_3_pressed"]
[connection signal="pressed" from="Instructions/CloseButton" to="Instructions" method="_on_close_button_pressed"]
[connection signal="pressed" from="Hints/CloseButton" to="Hints" method="_on_close_button_pressed"]
[connection signal="pressed" from="Hint" to="Hints" method="_on_hint_pressed"]
